Doggo/compiled/Doggo.java
/* Generated By:JavaCC: Do not edit this line. Doggo.java */
public class Doggo implements DoggoConstants {
    public static void main(String args[]) throws ParseException {
        Doggo parser;
        if (args.length==0) {
            System.out.println("Entr\u00c3\u00a9e standard");
            parser = new Doggo(System.in);
        }
        else if (args.length==1) {
            System.out.println("Analyse du fichier : " + args[0] + "...");
            try {
                parser = new Doggo(new java.io.FileInputStream(args[0]));
            } catch (java.io.FileNotFoundException e) {
                System.out.println("Le fichier :" + args[0] + " n'existe pas...");
                return;
            }
        }
        else {
            System.out.println("Erreur de lecture");
            return;
        }
        try {

            // Lance l'amorçage (avec la 1ère règle)
            parser.programme();
            System.out.println("Analyse syntaxique OK");
            // pw.close();
            // try {
            //     // fichierJava.close();
            // }
            // catch (java.io.IOException e) {}
        } catch (ParseException e) {
            System.out.println(e);
            System.out.println("L'analyse syntaxique r\u00c3\u00a9v\u00c3\u00a8le des erreurs");
        }
    }

  static final public void programme() throws ParseException {
    enTete();
    label_1:
    while (true) {
      if (jj_2_1(2)) {
        ;
      } else {
        break label_1;
      }
      if (jj_2_2(2)) {
        fonction();
      } else if (jj_2_3(2)) {
        procedure();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    principale();
  }

  static final public void enTete() throws ParseException {
    jj_consume_token(PROGRAMME);
    jj_consume_token(IDENTIFIANT);
  }

  static final public void fonction() throws ParseException {
    jj_consume_token(FONCTION);
    jj_consume_token(TYPE);
    jj_consume_token(IDENTIFIANT);
    jj_consume_token(32);
    if (jj_2_5(2)) {
      jj_consume_token(TYPE);
      jj_consume_token(IDENTIFIANT);
      label_2:
      while (true) {
        if (jj_2_4(2)) {
          ;
        } else {
          break label_2;
        }
        jj_consume_token(33);
        jj_consume_token(TYPE);
        jj_consume_token(IDENTIFIANT);
      }
    } else {
      ;
    }
    jj_consume_token(34);
    declaration();
    jj_consume_token(DEBUT);
    blocInstruction();
    jj_consume_token(RETOUR);
    jj_consume_token(IDENTIFIANT);
    jj_consume_token(35);
    jj_consume_token(FIN);
  }

  static final public void procedure() throws ParseException {
    jj_consume_token(PROCEDURE);
    jj_consume_token(IDENTIFIANT);
    jj_consume_token(32);
    if (jj_2_7(2)) {
      jj_consume_token(TYPE);
      jj_consume_token(IDENTIFIANT);
      label_3:
      while (true) {
        if (jj_2_6(2)) {
          ;
        } else {
          break label_3;
        }
        jj_consume_token(33);
        jj_consume_token(TYPE);
        jj_consume_token(IDENTIFIANT);
      }
    } else {
      ;
    }
    jj_consume_token(34);
    declaration();
    jj_consume_token(DEBUT);
    blocInstruction();
    jj_consume_token(FIN);
  }

  static final public void principale() throws ParseException {
    jj_consume_token(PRINCIPALE);
    declaration();
    jj_consume_token(DEBUT);
    blocInstruction();
    jj_consume_token(FIN);
  }

  static final public void blocInstruction() throws ParseException {
    label_4:
    while (true) {
      if (jj_2_8(2)) {
        ;
      } else {
        break label_4;
      }
      if (jj_2_9(2)) {
        affectation();
      } else if (jj_2_10(2)) {
        affichage();
      } else if (jj_2_11(2)) {
        ecriture();
      } else if (jj_2_12(2)) {
        boucle();
      } else if (jj_2_13(2)) {
        conditionnelle();
      } else if (jj_2_14(2)) {
        operateurIncrDecr();
      } else if (jj_2_15(2)) {
        appel();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void affichage() throws ParseException {
    jj_consume_token(AFFICHER);
    jj_consume_token(32);
    jj_consume_token(IDENTIFIANT);
    jj_consume_token(34);
    jj_consume_token(35);
  }

  static final public void ecriture() throws ParseException {
    jj_consume_token(ECRITURE);
    jj_consume_token(32);
    jj_consume_token(IDENTIFIANT);
    jj_consume_token(34);
    jj_consume_token(35);
  }

  static final public void operateurIncrDecr() throws ParseException {
    jj_consume_token(IDENTIFIANT);
    if (jj_2_16(2)) {
      jj_consume_token(INCREMENT);
    } else if (jj_2_17(2)) {
      jj_consume_token(DECREMENT);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(35);
  }

  static final public void boucle() throws ParseException {
    jj_consume_token(BOUCLE_TANT_QUE);
    expression();
    jj_consume_token(BOUCLE_FAIRE);
    blocInstruction();
    jj_consume_token(BOUCLE_FAIT);
  }

  static final public void conditionnelle() throws ParseException {
    jj_consume_token(SICOND_SI);
    expression();
    jj_consume_token(SICOND_ALORS);
    blocInstruction();
    jj_consume_token(SICOND_FIN_SI);
  }

  static final public void declaration() throws ParseException {
    label_5:
    while (true) {
      if (jj_2_18(2)) {
        ;
      } else {
        break label_5;
      }
      jj_consume_token(TYPE);
      jj_consume_token(IDENTIFIANT);
      jj_consume_token(SIGNE_AFFECTER);
      expression();
      jj_consume_token(35);
    }
  }

  static final public void affectation() throws ParseException {
    jj_consume_token(IDENTIFIANT);
    jj_consume_token(SIGNE_AFFECTER);
    expression();
    jj_consume_token(35);
  }

  static final public void expression() throws ParseException {
    expression1();
    if (jj_2_19(2)) {
      jj_consume_token(36);
      expression1();
    } else {
      ;
    }
  }

  static final public void expression1() throws ParseException {
    expression2();
    if (jj_2_20(2)) {
      jj_consume_token(37);
      expression2();
    } else {
      ;
    }
  }

  static final public void expression2() throws ParseException {
    if (jj_2_21(2)) {
      jj_consume_token(38);
      expression3();
    } else if (jj_2_22(2)) {
      expression3();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void expression3() throws ParseException {
    expression4();
    if (jj_2_29(2)) {
      if (jj_2_23(2)) {
        jj_consume_token(39);
      } else if (jj_2_24(2)) {
        jj_consume_token(40);
      } else if (jj_2_25(2)) {
        jj_consume_token(41);
      } else if (jj_2_26(2)) {
        jj_consume_token(42);
      } else if (jj_2_27(2)) {
        jj_consume_token(43);
      } else if (jj_2_28(2)) {
        jj_consume_token(44);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      expression4();
    } else {
      ;
    }
  }

  static final public void expression4() throws ParseException {
    expression5();
    if (jj_2_32(2)) {
      if (jj_2_30(2)) {
        jj_consume_token(45);
      } else if (jj_2_31(2)) {
        jj_consume_token(46);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      expression5();
    } else {
      ;
    }
  }

  static final public void expression5() throws ParseException {
    expression6();
    if (jj_2_35(2)) {
      if (jj_2_33(2)) {
        jj_consume_token(47);
      } else if (jj_2_34(2)) {
        jj_consume_token(48);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      expression6();
    } else {
      ;
    }
  }

  static final public void expression6() throws ParseException {
    expression7();
    if (jj_2_36(2)) {
      jj_consume_token(49);
      expression7();
    } else {
      ;
    }
  }

  static final public void expression7() throws ParseException {
    if (jj_2_37(2)) {
      expression8();
    } else if (jj_2_38(2)) {
      jj_consume_token(46);
      expression8();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void expression8() throws ParseException {
    if (jj_2_39(2)) {
      jj_consume_token(IDENTIFIANT);
    } else if (jj_2_40(2)) {
      valeur();
    } else if (jj_2_41(2)) {
      appel();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void valeur() throws ParseException {
    if (jj_2_42(2)) {
      jj_consume_token(VALEUR_ENTIER);
    } else if (jj_2_43(2)) {
      jj_consume_token(46);
      jj_consume_token(VALEUR_ENTIER);
    } else if (jj_2_44(2)) {
      jj_consume_token(45);
      jj_consume_token(VALEUR_ENTIER);
    } else if (jj_2_45(2)) {
      jj_consume_token(VALEUR_FLOTANT);
    } else if (jj_2_46(2)) {
      jj_consume_token(46);
      jj_consume_token(VALEUR_FLOTANT);
    } else if (jj_2_47(2)) {
      jj_consume_token(45);
      jj_consume_token(VALEUR_FLOTANT);
    } else if (jj_2_48(2)) {
      jj_consume_token(VALEUR_CHAINE);
    } else if (jj_2_49(2)) {
      jj_consume_token(VALEUR_BOOLEEN);
    } else if (jj_2_50(2)) {
      jj_consume_token(32);
      expression();
      jj_consume_token(34);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void appel() throws ParseException {
    jj_consume_token(IDENTIFIANT);
    jj_consume_token(32);
    if (jj_2_52(2)) {
      jj_consume_token(IDENTIFIANT);
      label_6:
      while (true) {
        if (jj_2_51(2)) {
          ;
        } else {
          break label_6;
        }
        jj_consume_token(50);
        jj_consume_token(IDENTIFIANT);
      }
    } else {
      ;
    }
    jj_consume_token(34);
    jj_consume_token(35);
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  static private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  static private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  static private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  static private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  static private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  static private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  static private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  static private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  static private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  static private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  static private boolean jj_2_17(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  static private boolean jj_2_18(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  static private boolean jj_2_19(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_19(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  static private boolean jj_2_20(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_20(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  static private boolean jj_2_21(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_21(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  static private boolean jj_2_22(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_22(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }

  static private boolean jj_2_23(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_23(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(22, xla); }
  }

  static private boolean jj_2_24(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_24(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(23, xla); }
  }

  static private boolean jj_2_25(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_25(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(24, xla); }
  }

  static private boolean jj_2_26(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_26(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(25, xla); }
  }

  static private boolean jj_2_27(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_27(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(26, xla); }
  }

  static private boolean jj_2_28(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_28(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(27, xla); }
  }

  static private boolean jj_2_29(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_29(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(28, xla); }
  }

  static private boolean jj_2_30(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_30(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(29, xla); }
  }

  static private boolean jj_2_31(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_31(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(30, xla); }
  }

  static private boolean jj_2_32(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_32(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(31, xla); }
  }

  static private boolean jj_2_33(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_33(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(32, xla); }
  }

  static private boolean jj_2_34(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_34(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(33, xla); }
  }

  static private boolean jj_2_35(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_35(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(34, xla); }
  }

  static private boolean jj_2_36(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_36(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(35, xla); }
  }

  static private boolean jj_2_37(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_37(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(36, xla); }
  }

  static private boolean jj_2_38(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_38(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(37, xla); }
  }

  static private boolean jj_2_39(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_39(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(38, xla); }
  }

  static private boolean jj_2_40(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_40(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(39, xla); }
  }

  static private boolean jj_2_41(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_41(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(40, xla); }
  }

  static private boolean jj_2_42(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_42(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(41, xla); }
  }

  static private boolean jj_2_43(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_43(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(42, xla); }
  }

  static private boolean jj_2_44(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_44(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(43, xla); }
  }

  static private boolean jj_2_45(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_45(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(44, xla); }
  }

  static private boolean jj_2_46(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_46(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(45, xla); }
  }

  static private boolean jj_2_47(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_47(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(46, xla); }
  }

  static private boolean jj_2_48(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_48(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(47, xla); }
  }

  static private boolean jj_2_49(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_49(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(48, xla); }
  }

  static private boolean jj_2_50(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_50(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(49, xla); }
  }

  static private boolean jj_2_51(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_51(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(50, xla); }
  }

  static private boolean jj_2_52(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_52(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(51, xla); }
  }

  static private boolean jj_3_48() {
    if (jj_scan_token(VALEUR_CHAINE)) return true;
    return false;
  }

  static private boolean jj_3_52() {
    if (jj_scan_token(IDENTIFIANT)) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_51()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  static private boolean jj_3R_13() {
    if (jj_scan_token(SICOND_SI)) return true;
    if (jj_3R_25()) return true;
    return false;
  }

  static private boolean jj_3_41() {
    if (jj_3R_15()) return true;
    return false;
  }

  static private boolean jj_3_16() {
    if (jj_scan_token(INCREMENT)) return true;
    return false;
  }

  static private boolean jj_3_11() {
    if (jj_3R_11()) return true;
    return false;
  }

  static private boolean jj_3_6() {
    if (jj_scan_token(33)) return true;
    if (jj_scan_token(TYPE)) return true;
    return false;
  }

  static private boolean jj_3_43() {
    if (jj_scan_token(46)) return true;
    if (jj_scan_token(VALEUR_ENTIER)) return true;
    return false;
  }

  static private boolean jj_3_4() {
    if (jj_scan_token(33)) return true;
    if (jj_scan_token(TYPE)) return true;
    return false;
  }

  static private boolean jj_3R_12() {
    if (jj_scan_token(BOUCLE_TANT_QUE)) return true;
    if (jj_3R_25()) return true;
    return false;
  }

  static private boolean jj_3_28() {
    if (jj_scan_token(44)) return true;
    return false;
  }

  static private boolean jj_3_40() {
    if (jj_3R_24()) return true;
    return false;
  }

  static private boolean jj_3R_14() {
    if (jj_scan_token(IDENTIFIANT)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_16()) {
    jj_scanpos = xsp;
    if (jj_3_17()) return true;
    }
    return false;
  }

  static private boolean jj_3R_15() {
    if (jj_scan_token(IDENTIFIANT)) return true;
    if (jj_scan_token(32)) return true;
    return false;
  }

  static private boolean jj_3_47() {
    if (jj_scan_token(45)) return true;
    if (jj_scan_token(VALEUR_FLOTANT)) return true;
    return false;
  }

  static private boolean jj_3_10() {
    if (jj_3R_10()) return true;
    return false;
  }

  static private boolean jj_3_27() {
    if (jj_scan_token(43)) return true;
    return false;
  }

  static private boolean jj_3_38() {
    if (jj_scan_token(46)) return true;
    if (jj_3R_23()) return true;
    return false;
  }

  static private boolean jj_3R_11() {
    if (jj_scan_token(ECRITURE)) return true;
    if (jj_scan_token(32)) return true;
    return false;
  }

  static private boolean jj_3R_24() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_42()) {
    jj_scanpos = xsp;
    if (jj_3_43()) {
    jj_scanpos = xsp;
    if (jj_3_44()) {
    jj_scanpos = xsp;
    if (jj_3_45()) {
    jj_scanpos = xsp;
    if (jj_3_46()) {
    jj_scanpos = xsp;
    if (jj_3_47()) {
    jj_scanpos = xsp;
    if (jj_3_48()) {
    jj_scanpos = xsp;
    if (jj_3_49()) {
    jj_scanpos = xsp;
    if (jj_3_50()) return true;
    }
    }
    }
    }
    }
    }
    }
    }
    return false;
  }

  static private boolean jj_3_42() {
    if (jj_scan_token(VALEUR_ENTIER)) return true;
    return false;
  }

  static private boolean jj_3_26() {
    if (jj_scan_token(42)) return true;
    return false;
  }

  static private boolean jj_3_7() {
    if (jj_scan_token(TYPE)) return true;
    if (jj_scan_token(IDENTIFIANT)) return true;
    return false;
  }

  static private boolean jj_3_34() {
    if (jj_scan_token(48)) return true;
    return false;
  }

  static private boolean jj_3_36() {
    if (jj_scan_token(49)) return true;
    if (jj_3R_22()) return true;
    return false;
  }

  static private boolean jj_3R_10() {
    if (jj_scan_token(AFFICHER)) return true;
    if (jj_scan_token(32)) return true;
    return false;
  }

  static private boolean jj_3R_23() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_39()) {
    jj_scanpos = xsp;
    if (jj_3_40()) {
    jj_scanpos = xsp;
    if (jj_3_41()) return true;
    }
    }
    return false;
  }

  static private boolean jj_3_39() {
    if (jj_scan_token(IDENTIFIANT)) return true;
    return false;
  }

  static private boolean jj_3_5() {
    if (jj_scan_token(TYPE)) return true;
    if (jj_scan_token(IDENTIFIANT)) return true;
    return false;
  }

  static private boolean jj_3_25() {
    if (jj_scan_token(41)) return true;
    return false;
  }

  static private boolean jj_3_31() {
    if (jj_scan_token(46)) return true;
    return false;
  }

  static private boolean jj_3_33() {
    if (jj_scan_token(47)) return true;
    return false;
  }

  static private boolean jj_3_35() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_33()) {
    jj_scanpos = xsp;
    if (jj_3_34()) return true;
    }
    if (jj_3R_21()) return true;
    return false;
  }

  static private boolean jj_3_9() {
    if (jj_3R_9()) return true;
    return false;
  }

  static private boolean jj_3_8() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_9()) {
    jj_scanpos = xsp;
    if (jj_3_10()) {
    jj_scanpos = xsp;
    if (jj_3_11()) {
    jj_scanpos = xsp;
    if (jj_3_12()) {
    jj_scanpos = xsp;
    if (jj_3_13()) {
    jj_scanpos = xsp;
    if (jj_3_14()) {
    jj_scanpos = xsp;
    if (jj_3_15()) return true;
    }
    }
    }
    }
    }
    }
    return false;
  }

  static private boolean jj_3_15() {
    if (jj_3R_15()) return true;
    return false;
  }

  static private boolean jj_3R_22() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_37()) {
    jj_scanpos = xsp;
    if (jj_3_38()) return true;
    }
    return false;
  }
